Closed
Bug 564162
Opened 15 years ago
Closed 15 years ago
Import 'Everything' of Outlook Express to existing T-Bird mailbox eliminates all existing mail in T-Bird Local Folders default folders
Categories
(Thunderbird :: Migration, defect)
Tracking
(blocking-thunderbird3.1 rc1+, thunderbird3.1 rc1-fixed, blocking-thunderbird3.0 .5+, thunderbird3.0 .5-fixed)
VERIFIED
FIXED
Thunderbird 3.3a1
People
(Reporter: d3herrick, Assigned: philbaseless-firefox)
References
(Blocks 1 open bug)
Details
(Keywords: dataloss)
Attachments
(2 files, 2 obsolete files)
|
1.62 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
standard8
:
approval-thunderbird3.0.5+
Bienvenu
:
approval-thunderbird3.1+
|
Details | Diff | Splinter Review |
|
3.10 KB,
image/png
|
Details |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US) AppleWebKit/533.4 (KHTML, like Gecko) Chrome/5.0.375.29 Safari/533.4
Build Identifier: 3.0.4
As the Summary notes, when I initiated an import of an Outlook Express installation that had no mail (I never used it) to existing T-Bird mailbox, it eliminated all existing mail in the T-Bird Inbox. In other words, none of my pre-existing email in the Inbox is accessible.
Reproducible: Always
Steps to Reproduce:
1. Tools-Import
2. Import Everything-Next
3. Outlook Express-Next
Actual Results:
With an instance of Outlook Express that has no Inbox entries, ostensibly, all T-Bird Inbox entries are removed after Import.
Expected Results:
Import Outlook Express entries into T-Bird, *adding* those entries to existing entries in T-Bird.
I believe this is upstream from oexpress.
Can someone test other imports
I believe this is a regression
When testing the new import code it would put everything in its own folder, inbox and all.
regardless of oe content, the Local Folders Defaults of inbox sent, etc are all wiped out and replaced with OE imported mail
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: Import of empty Outlook Express to existing T-Bird mailbox eliminates all existing mail in T-Bird → Import of Outlook Express to existing T-Bird mailbox eliminates all existing mail in T-Bird Local Folders default folders
(In reply to comment #0)
> User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US)
> AppleWebKit/533.4 (KHTML, like Gecko) Chrome/5.0.375.29 Safari/533.4
> Build Identifier: 3.0.4
the build identifier is not clear. Can you check the help/about and copy/paste the information there to be sure of the thunderbird version you are on?
Assignee: nobody → philbaseless-firefox
Updated•15 years ago
|
blocking-thunderbird3.1: --- → rc1+
Comment 5•15 years ago
|
||
I believe I see the bug in TB 3.0.4 on Windows XP i.e. here's what happened:
1. dragged some gmail into Local Folders, inbox folder
2. imported from outlook express
3. stuff i dragged in step 1 is deleted and replaced by stuff imported from outlook express i.e. Local Folders Inbox is overwritten with Outlook Express import
So it doesn't appear to be a regression but an existing bug.
importing mail only succeeds and doesn't overwrite files
Summary: Import of Outlook Express to existing T-Bird mailbox eliminates all existing mail in T-Bird Local Folders default folders → Import 'Everything' of Outlook Express to existing T-Bird mailbox eliminates all existing mail in T-Bird Local Folders default folders
Comment 8•15 years ago
|
||
(In reply to comment #6)
> importing mail only succeeds and doesn't overwrite files
If "importing mail only", Tb 3.0.4 imported as folders under root-level directory named "Outlook Express Import" as usual. (if repeated, suffix of 0, 1, 2, ,,, is added).
Does "import everything" skip creation of root-level "Outlook Express Import"?
Comment 9•15 years ago
|
||
I believe the issue is that we think we're doing migration, not an import, so we don't try to create the OE Import folder.
I'm trying to figure out how that gets set, but I have to run in a bit.
Comment 10•15 years ago
|
||
Looks like importing "everything" with OE just does a profile migration on purpose, which doesn't seem right.
I don't know the history of "everything", but I suspect that UI has been broken forever.
| Assignee | ||
Comment 11•15 years ago
|
||
http://mxr.mozilla.org/comm-central/source/mail/components/migration/src/nsProfileMigratorBase.cpp#139
yes, by design. But probably not intentional.
| Assignee | ||
Comment 12•15 years ago
|
||
I'd say just patch it to write a subfolder regardless if it is migrating or not unless we have a way to determine there is existing data. Although I don't see the value of that effort and complexity.
Users will just have move the data to the root inbox, etc as needed.
Either that or have a warning or better yet save the existing inbox etc in a special folder. Although that will be a more complex patch and not worth it in my opinion.
Comment 13•15 years ago
|
||
yeah, that, or pass a param to the migration dialog that says not to set the migration param, and propagate that param to the profile migrators. But your approach is a lot easier.
| Assignee | ||
Comment 14•15 years ago
|
||
Don't know about tests.
Builds and works for OExpress.
Your call if we want to just remove the code and not comment it out. After doing this I'm thinking just a comment of the bug number would be sufficient.
Attachment #444019 -
Flags: superreview?(bienvenu)
Attachment #444019 -
Flags: review?(bienvenu)
Comment 15•15 years ago
|
||
Comment on attachment 444019 [details] [diff] [review]
removes migration flag that overwrites existing mail in root folder
I'd remove the code instead of commenting it out. We can put it back if we fix this some other way.
What about address books? Do we crunch the address book as well on import,or just add to the existing one?
Comment 16•15 years ago
|
||
Comment on attachment 444019 [details] [diff] [review]
removes migration flag that overwrites existing mail in root folder
minusing because I don't like the commenting out...but I'm OK with this approach, given how close we are to 3.1 and 3.0.5
Attachment #444019 -
Flags: superreview?(bienvenu)
Attachment #444019 -
Flags: superreview-
Attachment #444019 -
Flags: review?(bienvenu)
Attachment #444019 -
Flags: review-
| Assignee | ||
Comment 17•15 years ago
|
||
Should I fix and r+sr+=you for checkin (tonight) or do you want to tweak and checkin (today)
Either way I am assuming I should keep the comment with the bug number reference and short desc.
I'll test the addressbook tonight.
Comment 18•15 years ago
|
||
is "import everything" the only import case where this happens?
litmus has only two import testcases
https://litmus.mozilla.org/show_test.cgi?id=5449 Import Address Book
https://litmus.mozilla.org/show_test.cgi?id=5448 Import Mail
"Migrate" also has no tests, based on examination of summaries(test titles). I suppose there might be a test that mentions migrate in the steps - but litmus doesn't allow searching of test steps and I didn't find it mentioned in any TB install tests.
(change eliminate -> delete)
Comment 19•15 years ago
|
||
Phil, I'm happy to check it in - if you're not around until tonight, I can just submit a patch and check it in for you...
| Assignee | ||
Comment 20•15 years ago
|
||
(In reply to comment #18)
> is "import everything" the only import case where this happens?
Possibly, but if there is another migrating method, this should fix that as well. But I don't know what 'migration' even means for sure, I just know 'import'. Migration in my sense of word shouldn't be available except on new install and new profile and first run and then forever turned off.
Comment 21•15 years ago
|
||
That's correct, migration only happens on new profile. But, the import everything option brings up migration.xul and does a migration; hence the bug.
| Assignee | ||
Comment 22•15 years ago
|
||
(In reply to comment #21)
> That's correct, migration only happens on new profile. But, the import
> everything option brings up migration.xul and does a migration; hence the bug.
if that's the case then this patch can be temporary and the bug remain open until that's fixed like you indicated earlier, with the parameter overWriteMail passed in for migration with a default of false. If that is agreeable, then you maybe you can forgo fixing the commented-out lines and check in as is for the affected branches.
| Assignee | ||
Comment 23•15 years ago
|
||
removed comments
Attachment #443892 -
Attachment is obsolete: true
Attachment #444019 -
Attachment is obsolete: true
Attachment #444202 -
Flags: superreview?(bienvenu)
Attachment #444202 -
Flags: review?(bienvenu)
Attachment #444202 -
Flags: approval-thunderbird3.1?
Attachment #444202 -
Flags: approval-thunderbird3.0.5?
Comment 24•15 years ago
|
||
Comment on attachment 444202 [details] [diff] [review]
removes migration flag that overwrites existing mail in root folder
address book import just appends to the ab (which is an other option for fixing this, actually...)
Attachment #444202 -
Flags: superreview?(bienvenu)
Attachment #444202 -
Flags: superreview+
Attachment #444202 -
Flags: review?(bienvenu)
Attachment #444202 -
Flags: review+
| Assignee | ||
Comment 25•15 years ago
|
||
not sure if I need to do something else to flag this for checkin to 3.0.5 and 3.1.next
Keywords: checkin-needed
| Assignee | ||
Comment 26•15 years ago
|
||
David,
Can you '+' my 3.1 and 3.0.5 flags?
Updated•15 years ago
|
Attachment #444202 -
Flags: approval-thunderbird3.1?
Attachment #444202 -
Flags: approval-thunderbird3.1+
Attachment #444202 -
Flags: approval-thunderbird3.0.5?
Attachment #444202 -
Flags: approval-thunderbird3.0.5+
Comment 27•15 years ago
|
||
Comment on attachment 444202 [details] [diff] [review]
removes migration flag that overwrites existing mail in root folder
actually, standard8 should make the 3.0.5 call...
Attachment #444202 -
Flags: approval-thunderbird3.0.5+ → approval-thunderbird3.0.5?
Whiteboard: [for trunk][for 3.1][for 3.0.5] → [for trunk][for 3.1]
Comment 28•15 years ago
|
||
Checked into trunk and 1.9.2 branch:
http://hg.mozilla.org/comm-central/rev/5df43ba3b4c6
http://hg.mozilla.org/releases/comm-1.9.2/rev/ea933e04aecf
Status: NEW → RESOLVED
Closed: 15 years ago
status-thunderbird3.1:
--- → rc1-fixed
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [for trunk][for 3.1]
Target Milestone: --- → Thunderbird 3.2a1
Comment 29•15 years ago
|
||
I've raised several follow-up bugs to deal with the issues we've got surrounding the migration dialog:
Bug 564768 which is the regression caused by this bug which is on migration we won't be putting migrated mail into the Local Folders, but into a sub-folder, and would be able to be fixed once the following two are fixed:
Bug 564765 for redesigning the UI structure (at least) which will get us a fix for:
Bug 564767 which is about the "Import Everything" calling the migration assistant as a migration rather than import.
Updated•15 years ago
|
Attachment #444202 -
Flags: approval-thunderbird3.0.5? → approval-thunderbird3.0.5+
Comment 30•15 years ago
|
||
Checked into 1.9.1 for 3.0.5:
http://hg.mozilla.org/releases/comm-1.9.1/rev/76ec733602b4
status-thunderbird3.0:
--- → .5-fixed
Comment 31•15 years ago
|
||
Verifying this bug with 3.0.5 build 1: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1.10) Gecko/20100510 Thunderbird/3.0.5
Importing Everything from OE will now result in multiple Import folders added, instead of being replaced.
Updated•15 years ago
|
Status: RESOLVED → VERIFIED
Updated•15 years ago
|
Keywords: verified-thunderbird3.0
You need to log in
before you can comment on or make changes to this bug.
Description
•