Bug 564162 Import 'Everything' of Outlook Express to existing T-Bird mailbox eliminates all existing mail in T-Bird Local Folders default folders. r/sr=bienvenu